# kwin-effect-osdclock

./: CMakeLists.txt  README.md
archlinux/: PKGBUILD
cmake/modules/: PkgConfigGetVar.cmake
src/: CMakeLists.txt  blur.cpp  blur.h  osdclock.cpp  osdclock.desktop  osdclock.h  osdclock.kcfg  osdclock_config.cpp  osdclock_config.desktop  osdclock_config.h  osdclock_config.ui  osdclockconfig.kcfgc  plugin.cpp
